[gd_scene load_steps=12 format=3 uid="uid://bog2fwt2cvggb"]

[ext_resource type="Script" path="res://Scripts/Game/Characters/Character.gd" id="1_ohnkk"]
[ext_resource type="Script" path="res://Scripts/Game/Characters/CharacterInput.gd" id="2_52eob"]
[ext_resource type="SpriteFrames" uid="uid://ld0t10aujxwi" path="res://Data/Game/Characters/YoungMan.tres" id="2_mx74b"]
[ext_resource type="SpriteFrames" uid="uid://c62yw8o6ukqa6" path="res://Data/Game/Characters/OldMan.tres" id="3_mikcp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ghfrl"]
size = Vector2(10, 5)

[sub_resource type="Animation" id="Animation_mny82"]
resource_name = "WalkDown"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"WalkDown", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_1e22y"]
resource_name = "WalkLeft"
length = 0.8
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"WalkLeft", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_sx5hc"]
resource_name = "WalkRight"
length = 0.8
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"WalkRight", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="Animation" id="Animation_m601j"]
resource_name = "WalkUp"
length = 0.8
loop_mode = 1
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"WalkUp", 1.0, false],
"method": &"play"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_navol"]
_data = {
"WalkDown": SubResource("Animation_mny82"),
"WalkLeft": SubResource("Animation_1e22y"),
"WalkRight": SubResource("Animation_sx5hc"),
"WalkUp": SubResource("Animation_m601j")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2eae3"]
size = Vector2(10, 10)

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_ohnkk")
age_sprite_frames = {
0.0: ExtResource("3_mikcp"),
1.0: ExtResource("2_mx74b")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_ghfrl")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_navol")
}
speed_scale = 2.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = ExtResource("2_mx74b")
animation = &"WalkUp"
speed_scale = 2.0

[node name="CharacterInput" type="Node" parent="."]
script = ExtResource("2_52eob")
is_player = true

[node name="InteractButton" type="Button" parent="."]
visible = false
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -36.0
offset_right = 8.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(8, 22)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 10
text = "A"

[node name="DirectionNode" type="Node2D" parent="."]
position = Vector2(0, 10.5)

[node name="InteractTrigger" type="ShapeCast2D" parent="DirectionNode"]
shape = SubResource("RectangleShape2D_2eae3")
target_position = Vector2(5, 0)
collision_mask = 128

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)
